--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "autoprefixer": "10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.1",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
     "eslint-plugin-node": "^11.1.0",
@@ -49,6 +49,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-unused-imports": "^3.2.0",
     "postcss": "8.4.38",
+    "prettier": "^3.3.2",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.3",
     "typescript": "5.0.4"
